--- a/andriodApp/app/src/main/res/values/strings.xml
+++ b/andriodApp/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="generate_qr_code_string">      Generate QR Code</string>
     <string name="upload_your_qr_code_string">Upload YourQR Code</string>
     <string name="upload_event_poster_string">Upload EventPoster</string>
+    <string name="upload_event_qr_code">upload event qr code</string>
+    <string name="back_button_implemented_with_less_then">back button implemented with less then</string>
 </resources>
