--- a/andriodApp/app/src/main/res/values/strings.xml
+++ b/andriodApp/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="upload_event_poster_string">Upload EventPoster</string>
     <string name="upload_event_qr_code">upload event qr code</string>
     <string name="back_button_implemented_with_less_then">back button implemented with less then</string>
+
+    <string name="default_info_title">Default Location</string>
+    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
 </resources>
